@@ -131,6 +131,7 @@ _directive_registry = {
       'unicode': ('misc', 'unicode_directive'),
       'class': ('misc', 'class_directive'),
       'role': ('misc', 'role'),
+      'default-role': ('misc', 'default_role'),
       'restructuredtext-test-directive': ('misc', 'directive_test_function'),}
 """Mapping of directive name to (module name, function name).  The directive
 name is canonical & must be lowercase.  Language-dependent names are defined
