@@ -62,6 +62,7 @@ directives = {
       u'unicode': 'unicode',
       u'clase': 'class',
       u'rol': 'role',
+      u'default-role (translation required)': 'default-role',
       u'contenido': 'contents',
       u'numseccion': 'sectnum',
       u'numsecci\u00f3n': 'sectnum',
