@@ -56,6 +56,7 @@ directives = {
       u'unicode': 'unicode',
       u'classe': 'class',
       u'role (translation required)': 'role',
+      u'default-role (translation required)': 'default-role',
       u'sommaire': 'contents',
       u'table-des-mati\u00E8res': 'contents',
       u'sectnum': 'sectnum',
