@@ -53,6 +53,7 @@ directives = {
       u'unicode': 'unicode',
       u'class (translation required)': 'class',
       u'role (translation required)': 'role',
+      u'default-role (translation required)': 'default-role',
       u'obsah': 'contents',
       u'\xe8as\x9d': 'sectnum',
       u'\xe8as\x9d-\xe8\xedslovanie': 'sectnum',
